SOLR-13335: Upgrade to velocity 2.0 and velocity-tools 3.0
Signed-off-by: Kevin Risden <krisden@apache.org>

--- a/lucene/ivy-versions.properties
+++ b/lucene/ivy-versions.properties
@@ -191,8 +191,13 @@ org.apache.tika.version = 1.19.1
 /org.apache.tika/tika-parsers = ${org.apache.tika.version}
 /org.apache.tika/tika-xmp = ${org.apache.tika.version}
 
-/org.apache.velocity/velocity = 1.7
-/org.apache.velocity/velocity-tools = 2.0
+org.apache.velocity.tools.version = 3.0
+/org.apache.velocity.tools/velocity-tools-generic = ${org.apache.velocity.tools.version}
+/org.apache.velocity.tools/velocity-tools-view = ${org.apache.velocity.tools.version}
+/org.apache.velocity.tools/velocity-tools-view-jsp = ${org.apache.velocity.tools.version}
+
+/org.apache.velocity/velocity-engine-core = 2.0
+
 /org.apache.xmlbeans/xmlbeans = 3.0.1
 /org.apache.zookeeper/zookeeper = 3.4.13
 
